fix(header): fixed css for header ai button on mobile

--- a/src/theme/SearchBar/styles.css
+++ b/src/theme/SearchBar/styles.css
@@ -41,7 +41,7 @@
   transform: translateY(0);
 }
 
-.ask-ai-text {
+.search-ask-ai-text {
   font-weight: 600;
   display: flex;
   align-items: center;
